[package]
name = "stack-string"
version = "0.7.4"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"
description = "A wrapper around SmartString which adds support for various extensions"
license-file = "LICENSE"
homepage = "https://github.com/ddboline/stack-string-rs"
repository = "https://github.com/ddboline/stack-string-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0", features=["derive"]}
derive_more = "0.99"
smartstring = {version="1.0", features=["serde"]}
arrayvec = {version="0.7"}
diesel = {version="1.4", features=["postgres"], optional=true}
postgres-types = {version="0.2", optional=true}
bytes = {version="1.0", optional=true}
rweb = {version="0.15", features=["openapi"], optional=true}
hyper = {version="0.14", optional=true}
async-graphql = {version="4.0", features=["dataloader"], optional=true}

[dev-dependencies]
rand = "0.8"
serde_json = "1.0"
tokio = {version = "1.0", features=["full"]}
async-trait = "0.1"

[features]
default = []
diesel_types = ["diesel"]
postgres_types = ["postgres-types", "bytes"]
rweb-openapi = ["rweb", "hyper"]
async_graphql = ["async-graphql"]
