[package]
name = "stack-string"
version = "0.9.4"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"
description = "A wrapper around SmartString which adds support for various extensions"
license-file = "LICENSE"
homepage = "https://github.com/ddboline/stack-string-rs"
repository = "https://github.com/ddboline/stack-string-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0", features=["derive"]}
derive_more = {version="1.0", features=["full"]}
smartstring = {version="1.0", features=["serde"]}
arrayvec = {version="0.7"}
postgres-types = {version="0.2", optional=true}
bytes = {version="1.7", optional=true}
async-graphql = {version="7.0", features=["dataloader"], optional=true}
rweb = {git = "https://github.com/ddboline/rweb.git", features=["openapi"], optional=true, tag="0.15.2"}

[dev-dependencies]
rand = "0.8"
serde_json = "1.0"
tokio = {version = "1.35", features=["rt", "macros", "rt-multi-thread"]}
async-trait = "0.1"

[features]
default = []
postgres_types = ["postgres-types", "bytes"]
rweb-openapi = ["rweb"]
async_graphql = ["async-graphql"]
