[package]
name = "stack-string"
version = "1.1.4"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"
description = "A wrapper around SmartString which adds support for various extensions"
license-file = "LICENSE"
homepage = "https://github.com/ddboline/stack-string-rs"
repository = "https://github.com/ddboline/stack-string-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0", features=["derive"]}
derive_more = {version="2.1", features=["full"]}
compact_str = {version="0.9", features=["serde", "markup", "bytes"]}
arrayvec = {version="0.7"}
smartstring = {version="1.0", features=["serde"], optional=true}
postgres-types = {version="0.2", optional=true}
bytes = {version="1.10", optional=true}
async-graphql = {version="7.0", features=["dataloader"], optional=true}
utoipa = {version="5.4", optional=true}
axum = {version="0.8", optional=true}

[dev-dependencies]
rand = "0.9"
serde_json = "1.0"
tokio = {version = "1.48", features=["rt", "macros", "rt-multi-thread"]}
async-trait = "0.1"

[features]
default = []
smart_string = ["smartstring"]
postgres_types = ["postgres-types", "bytes"]
async_graphql = ["async-graphql"]
axum_types = ["axum"]
utoipa_types = ["utoipa"]
